# Autonomous_Vehicle_Control

./: .gitignore  BACKLOG.md  pyproject.toml
comparison/: compare_versions.py  metrics.py
v1_baseline/: main.py  stress_test.py
v1_baseline/config/: parameters.py
v1_baseline/deepc/: deepc_controller.py  hankel.py
v1_baseline/visualization/: plot_results.py
